trunk/Archive2/60/fea3d1a30eeafb/output
main.cpp:4:16: error: expected unqualified-id before ‘)’ token
     const Ciao(){};
                ^
